fixed some problems with footer alignment and padding

--- a/style.css
+++ b/style.css
@@ -15,11 +15,15 @@ footer {
   text-align: center;
 }
 footer{
-  padding-bottom: 86px;
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  width:100%;
 }
 .Grid {
-  width: 30%;
-  Height: 50%;
+  max-width: 30%;
+  max-height: 50%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
